# ohtuviikot

./: README.md  haaratiedosto.txt
Viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
Viikko2/nhl-reader/: .pylintrc
Viikko2/nhl-reader/src/: index.py  player.py  playerReader.py  playerStats.py
Viikko2/poetry-web/: pyproject.toml
Viikko3/: retro.md
Viikko3/hello-robot/: log.html  output.xml  report.html
Viikko3/hello-robot/src/: CounterLibrary.py
Viikko3/hello-robot/src/tests/: increase_counter.robot
Viikko3/login/: log.html  output.xml  report.html
Viikko3/login/src/tests/: login.robot  resource.robot
Viikko4/maksukortti-mock/src/: kassapaate.py
Viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
Viikko4/verkkokauppa/src/tests/: kauppa_test.py
Viikko5/: review.md  vibe.md
Viikko5/tennis/src/: tennis_game.py
Viikko6/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
Viikko6/query-language/src/: index.py  matchers.py
